--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>parser</groupId>
-	<artifactId>json</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<groupId>purejson.parser</groupId>
+	<artifactId>parser</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>json</name>
+	<name>purejson</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
