--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>purejson.parser</groupId>
 	<artifactId>parser</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>purejson</name>
@@ -84,7 +82,7 @@
             		</execution>
             		<execution>
             			<id>attach-javadoc</id>
-            			<goals></goals>
+            			<goals />
             		</execution>
             	</executions>
             </plugin>
@@ -137,7 +135,7 @@
     	<connection>scm:git:git://github.com/senthilganeshs/jsonp.git</connection>
     	<developerConnection>scm:git:senthilganeshs@github.com:jsonp/jsonp.git</developerConnection>
     	<url>https://github.com/senthilganeshs/jsonp</url>
-    	<tag>HEAD</tag>
+    	<tag>parser-1.0.0</tag>
     </scm>
 
 	<dependencies>
